$Id: ChangeLog,v 1.105 2010/04/13 15:20:15 stewy Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU 2.x.y
	- [rb] malloc based implementation, both using contiguous (i.e. double
	       sized) and wrapped buffer.  Can be now used also on Windows.
	- [test] make it work on non-UNIXes.
	- [lexer] basic lexical tokenizer.
	- [uri] regex-free uri parser (now recursive descent).  It has the happy
	        side-effect of making the net module work on MinGw.
	- [config] add u_config_walk function to traverse a config tree.
	- [carpal] fixed 1.0 compatibility (missing u_con)

LibU 2.0.0
	- [pqueue] added new priority queue module
	- [rb] added new ring buffer module
	- [test] completely revamped, new interfaces
	- [net] module implementation and interfaces revamped
	- [uri] complete support for RFC 3986; added u_uri_knead interface to 
	  create conformant URI strings; added tester
	- [carpal] dbg(), warn(), info(), err() and friends have been prefixed 
	  with "u_" to avoid conflicts with the <err.h> header
	- [config] u_config_print_to_fp with brace delimiters for children records;
	  documentation fixes by Mickael Auger ; don't dump the 'include' 
	  directive when serializing and/or saving an u_config_t object to 
	  file (would break semantical equivalence) 
	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
	  that is supplied to the callback function ; add "easy" interface to
	  simplify some common use cases ; updated docs
	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed;
	  added interfaces for intmax_t and uintmax_t types; use C99 types 
	  explicitly (_Complex and _Bool), to avoid clash with bool and complex 
	  possibly #define'd by the user
	- [buf] added u_buf_save interface
	- [misc] some minor fixes
	- [string] minor fixes and cleanup
	- [pwd] internally use u_strtok instead of deprecated u_tokenize 
	- fix configure bug which prevented IPv6 and UNIX sockets bits inclusion;